fix scrollbar e testi

--- a/style.css
+++ b/style.css
@@ -1,34 +1,50 @@
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
 }
 
 .bg-azure {
     background-color: #8EDAFC;
 }
 
-.text-azure {
+.azure-icon {
     color: #8EDAFC;
+}
+
+.icons:hover {
+  color: black
+}
+
+.icons:first-child {
+    color: #6B7477;
 }
 
 .row:first-child {
     background-color: #EAEAEA;
 }
+
 #root {
-    background-image: linear-gradient(to bottom, #009688 0px, #009688 100px, white 100px, white 100%);
+    background-image: linear-gradient(to bottom, #009688 0px, #009688 100px, rgb(211, 204, 204) 100px, rgb(211, 204, 204));
     width: 100vw;
     height: 100vh;
 }
+
 .container {
     padding-top: 35px;
-    /* border: 1px solid black; */
+    padding-bottom: 35px;
+    /* border: 2px solid black; */
 }
+
 .userAvatar img {
     margin: 12px 8px;
     width: 50px;
     height: 50px;
-    filter: drop-shadow(2px 1px 2px  rgb(133, 133, 133));
+
 }
 
 .contact {
@@ -40,42 +56,49 @@
 .contacts {
     height: calc(100% - 180px);
     overflow: auto;
-    cursor: pointer;
 }
 
-.contact:hover{
-    box-shadow: inset 0px 0px 12px rgba(37, 37, 37, 0.23);
-    border-radius: 5px;
+.emoticons:hover, .vocal:hover {
+    color: black;
+}
+
+.contact:hover {
+   box-shadow: inset 0px 0px 15px  rgba(37, 37, 37, 0.23);
+   border-radius: 5px;
 }
 
 .notifications {
     height: 55px;
 }
 
+.azure-icon:hover {
+    color: black;
+    
+}
+
 .header {
-    background-color:  white;
+    background-color: #EAEAEA;
     height: 70px;
 }
 
 .messages-container {
-    box-shadow: inset 0px 0px 12px rgba(37, 37, 37, 0.23);
+    box-shadow: inset 0px 0px 15px  rgba(37, 37, 37, 0.23);
     margin: 0 auto;
     overflow-y: auto;
     height: calc(100% - 120px);
 }
 
-.row {
-    filter: drop-shadow(0px 0px 12px  rgba(37, 37, 37, 0.23));
+.row{
+    filter: drop-shadow(0px 0px 10px  rgba(37, 37, 37, 0.261));
 }
 
 .footer {
-    background-color: white;
-    height: 70px;
+    background-color: #EAEAEA;
+    height: 50px;
 }
 
 .search-bar {
     height: 45px;
-
 }
 
 .lastAccess {
@@ -85,46 +108,41 @@
     right: 5px;
 }
 
-.overflow {
+.overflow{
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+   
 }
 
 .lastMessage {
     width: 65%;
-    font-size: 10px;
+    font-size: 12px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
 }
 
-.lastDate{
+.lastDate {
     font-size: 10px;
-    font-weight: bold;
-
 }
-
-.dropdown-menu {
-    padding: 0;
-
-
+.dropdown-menu{
+    padding:0
 }
 
 .message-text {
-    word-wrap:  break-word;
+    word-wrap: break-word;
     position: relative;
     margin: 20px 20px;
-    padding: 15px 15px 0px 15px;
+    padding: 10px 10px 0px 10px;
     min-width: 20%;
     max-width: 50%;
     border-radius: 10px;
-    font-size: 14px;
-    /* font-weight: bold; */
-    filter: drop-shadow(3px 3px 3px rgb(133, 133, 133));
+    font-size: 1rem;
+    filter: drop-shadow(3px 3px 3px rgb(133, 133, 133)); 
 }
 
-.fa-chevron-down,.btn {
+.fa-chevron-down,.btn{
     z-index: 1;
     position: absolute;
     right: 0;
@@ -132,7 +150,8 @@
     opacity: 0;
 }
 
-.fa-chevron-down:hover,.btn:hover {
+.fa-chevron-down:hover,.btn:hover{
+    cursor: pointer;
     opacity: 1;
 }
 
@@ -155,7 +174,7 @@
 }
 
 .active {
-    background-color: lightgrey;
+    background-color: #c3c3c3;
 }
 
 .background {
@@ -163,8 +182,8 @@
     background-repeat: repeat;
 }
 
-.fa-face-smile, .fa-microphone {
-    color: gray;
+.fa-face-smile,.fa-microphone{
+    color: #6B7477;
     padding: 0 20px;
 }
 
@@ -173,9 +192,11 @@
 .fa-circle-notch,
 .fa-message,
 .fa-ellipsis-vertical {
+    cursor: pointer;
     padding-left: 10px;
-    color: gray;
+    color: #6B7477;
 }
+
 
 
 
